proj2/y.output
   0  $accept : Program $end

   1  Program : PROGRAMnum IDnum SEMInum ClassDecl_rec

   2  ClassDecl_rec : ClassDecl
   3                | ClassDecl_rec ClassDecl

   4  ClassDecl : CLASSnum IDnum ClassBody

   5  ClassBody : LBRACEnum MethodDecl_List RBRACEnum

   6  MethodDecl_List : MethodDecl_z1
   7                  | MethodDecl_List MethodDecl

   8  MethodDecl_z1 :
   9                | Decls
  10                | MethodDecl
  11                | Decls MethodDecl

  12  MethodDecl : METHODnum Type IDnum LPARENnum Formal_Parameter_List RPARENnum Block

  13  $$1 :

  14  MethodDecl : METHODnum VOIDnum $$1 IDnum LPARENnum Formal_Parameter_List RPARENnum Block

  15  Type : IDnum Type_rec
  16       | INTnum Type_rec
  17       | IDnum Type_rec DOTnum Type
  18       | INTnum Type_rec DOTnum Type

  19  Type_rec :
  20           | LBRACnum RBRACnum
  21           | Type_rec LBRACnum RBRACnum

  22  Formal_Parameter_List :
  23                        | Formal_Parameter_List_rec

  24  Formal_Parameter_List_rec : Formal_Parameter
  25                            | Formal_Parameter SEMInum Formal_Parameter_List_rec

  26  Formal_Parameter : VALnum INTnum Formal_Parameter_rec
  27                   | INTnum Formal_Parameter_rec

  28  Formal_Parameter_rec : IDnum
  29                       | IDnum COMMAnum Formal_Parameter_rec

  30  Block : StatementList
  31        | Decls StatementList

  32  StatementList : LBRACEnum StatementList_rec RBRACEnum

  33  StatementList_rec : Statement
  34                    | StatementList_rec SEMInum Statement

  35  Statement :
  36            | AssignmentStatement
  37            | MethodCallStatement
  38            | ReturnStatement
  39            | IfStatement
  40            | WhileStatement

  41  Decls : DECLARATIONSnum FieldDecl_List ENDDECLARATIONSnum

  42  FieldDecl_List :
  43                 | FieldDecl
  44                 | FieldDecl_List FieldDecl

  45  FieldDecl : Type FieldDecl_rec SEMInum

  46  FieldDecl_rec : FieldDecl_Id
  47                | FieldDecl_rec COMMAnum FieldDecl_Id

  48  FieldDecl_Id : VariableDeclId
  49               | VariableDeclId EQUALnum VariableInitializer

  50  VariableDeclId : IDnum
  51                 | IDnum BracketLoop

  52  BracketLoop : LBRACnum RBRACnum
  53              | BracketLoop LBRACnum RBRACnum

  54  VariableInitializer : Expression
  55                      | ArrayInitializer
  56                      | ArrayCreationExpression

  57  ArrayInitializer : LBRACEnum ArrayInitializer_rec RBRACEnum

  58  ArrayInitializer_rec : Expression
  59                       | ArrayInitializer_rec COMMAnum Expression

  60  ArrayCreationExpression : INTnum ArrayCreationExpression_rec

  61  ArrayCreationExpression_rec : ArrayExpression
  62                              | ArrayCreationExpression_rec ArrayExpression

  63  ArrayExpression : LBRACnum Expression RBRACnum

  64  AssignmentStatement : Variable ASSGNnum Expression

  65  MethodCallStatement : Variable LPARENnum ParameterList RPARENnum

  66  ParameterList :
  67                | Expression
  68                | Expression COMMAnum ParameterList

  69  ReturnStatement : RETURNnum
  70                  | RETURNnum Expression

  71  IfStatement : IFnum Expression StatementList
  72              | IFnum Expression StatementList ELSEnum StatementList

  73  WhileStatement : WHILEnum Expression StatementList

  74  Expression : SimpleExpression
  75             | SimpleExpression LTnum SimpleExpression
  76             | SimpleExpression LEnum SimpleExpression
  77             | SimpleExpression EQnum SimpleExpression
  78             | SimpleExpression NEnum SimpleExpression
  79             | SimpleExpression GEnum SimpleExpression
  80             | SimpleExpression GTnum SimpleExpression

  81  Factor : UnsignedConstant
  82         | Variable
  83         | MethodCallStatement
  84         | LPARENnum Expression RPARENnum
  85         | NOTnum Factor

  86  UnsignedConstant : ICONSTnum
  87                   | SCONSTnum

  88  SimpleExpression : Term SimpleExpression_Op_rec
  89                   | PLUSnum Term SimpleExpression_Op_rec
  90                   | MINUSnum Term SimpleExpression_Op_rec

  91  SimpleExpression_Op_rec :
  92                          | SimpleExpression_Op SimpleExpression_Op_rec

  93  SimpleExpression_Op : PLUSnum Term
  94                      | MINUSnum Term
  95                      | ORnum Term

  96  Term : Factor Term_Op_rec

  97  Term_Op_rec :
  98              | Term_Op Term_Op_rec

  99  Term_Op : TIMESnum Factor
 100          | DIVIDEnum Factor
 101          | ANDnum Factor

 102  Variable : IDnum Variable_rec

 103  Variable_rec :
 104               | Index Variable_rec
 105               | Field Variable_rec

 106  Field : DOTnum IDnum

 107  Index : LBRACnum Index_rec RBRACnum

 108  Index_rec : Expression
 109            | Expression COMMAnum Index_rec

state 0
	$accept : . Program $end  (0)

	PROGRAMnum  shift 1
	.  error

	Program  goto 2


state 1
	Program : PROGRAMnum . IDnum SEMInum ClassDecl_rec  (1)

	IDnum  shift 3
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : PROGRAMnum IDnum . SEMInum ClassDecl_rec  (1)

	SEMInum  shift 4
	.  error


state 4
	Program : PROGRAMnum IDnum SEMInum . ClassDecl_rec  (1)

	CLASSnum  shift 5
	.  error

	ClassDecl_rec  goto 6
	ClassDecl  goto 7


state 5
	ClassDecl : CLASSnum . IDnum ClassBody  (4)

	IDnum  shift 8
	.  error


state 6
	Program : PROGRAMnum IDnum SEMInum ClassDecl_rec .  (1)
	ClassDecl_rec : ClassDecl_rec . ClassDecl  (3)

	CLASSnum  shift 5
	$end  reduce 1

	ClassDecl  goto 9


state 7
	ClassDecl_rec : ClassDecl .  (2)

	.  reduce 2


state 8
	ClassDecl : CLASSnum IDnum . ClassBody  (4)

	LBRACEnum  shift 10
	.  error

	ClassBody  goto 11


state 9
	ClassDecl_rec : ClassDecl_rec ClassDecl .  (3)

	.  reduce 3


10: shift/reduce conflict (shift 13, reduce 8) on METHODnum
state 10
	ClassBody : LBRACEnum . MethodDecl_List RBRACEnum  (5)
	MethodDecl_z1 : .  (8)

	DECLARATIONSnum  shift 12
	METHODnum  shift 13
	RBRACEnum  reduce 8

	MethodDecl_List  goto 14
	MethodDecl_z1  goto 15
	Decls  goto 16
	MethodDecl  goto 17


state 11
	ClassDecl : CLASSnum IDnum ClassBody .  (4)

	.  reduce 4


12: shift/reduce conflict (shift 18, reduce 42) on IDnum
12: shift/reduce conflict (shift 19, reduce 42) on INTnum
state 12
	Decls : DECLARATIONSnum . FieldDecl_List ENDDECLARATIONSnum  (41)
	FieldDecl_List : .  (42)

	IDnum  shift 18
	INTnum  shift 19
	ENDDECLARATIONSnum  reduce 42

	FieldDecl_List  goto 20
	FieldDecl  goto 21
	Type  goto 22


state 13
	MethodDecl : METHODnum . Type IDnum LPARENnum Formal_Parameter_List RPARENnum Block  (12)
	MethodDecl : METHODnum . VOIDnum $$1 IDnum LPARENnum Formal_Parameter_List RPARENnum Block  (14)

	IDnum  shift 18
	VOIDnum  shift 23
	INTnum  shift 19
	.  error

	Type  goto 24


state 14
	ClassBody : LBRACEnum MethodDecl_List . RBRACEnum  (5)
	MethodDecl_List : MethodDecl_List . MethodDecl  (7)

	RBRACEnum  shift 25
	METHODnum  shift 13
	.  error

	MethodDecl  goto 26


state 15
	MethodDecl_List : MethodDecl_z1 .  (6)

	.  reduce 6


16: shift/reduce conflict (shift 13, reduce 9) on METHODnum
state 16
	MethodDecl_z1 : Decls .  (9)
	MethodDecl_z1 : Decls . MethodDecl  (11)

	METHODnum  shift 13
	RBRACEnum  reduce 9

	MethodDecl  goto 27


state 17
	MethodDecl_z1 : MethodDecl .  (10)

	.  reduce 10


18: shift/reduce conflict (shift 28, reduce 19) on LBRACnum
state 18
	Type : IDnum . Type_rec  (15)
	Type : IDnum . Type_rec DOTnum Type  (17)
	Type_rec : .  (19)

	LBRACnum  shift 28
	IDnum  reduce 19
	DOTnum  reduce 19

	Type_rec  goto 29


19: shift/reduce conflict (shift 28, reduce 19) on LBRACnum
state 19
	Type : INTnum . Type_rec  (16)
	Type : INTnum . Type_rec DOTnum Type  (18)
	Type_rec : .  (19)

	LBRACnum  shift 28
	IDnum  reduce 19
	DOTnum  reduce 19

	Type_rec  goto 30


state 20
	Decls : DECLARATIONSnum FieldDecl_List . ENDDECLARATIONSnum  (41)
	FieldDecl_List : FieldDecl_List . FieldDecl  (44)

	IDnum  shift 18
	ENDDECLARATIONSnum  shift 31
	INTnum  shift 19
	.  error

	FieldDecl  goto 32
	Type  goto 22


state 21
	FieldDecl_List : FieldDecl .  (43)

	.  reduce 43


state 22
	FieldDecl : Type . FieldDecl_rec SEMInum  (45)

	IDnum  shift 33
	.  error

	FieldDecl_Id  goto 34
	FieldDecl_rec  goto 35
	VariableDeclId  goto 36


state 23
	MethodDecl : METHODnum VOIDnum . $$1 IDnum LPARENnum Formal_Parameter_List RPARENnum Block  (14)
	$$1 : .  (13)

	.  reduce 13

	$$1  goto 37


state 24
	MethodDecl : METHODnum Type . IDnum LPARENnum Formal_Parameter_List RPARENnum Block  (12)

	IDnum  shift 38
	.  error


state 25
	ClassBody : LBRACEnum MethodDecl_List RBRACEnum .  (5)

	.  reduce 5


state 26
	MethodDecl_List : MethodDecl_List MethodDecl .  (7)

	.  reduce 7


state 27
	MethodDecl_z1 : Decls MethodDecl .  (11)

	.  reduce 11


state 28
	Type_rec : LBRACnum . RBRACnum  (20)

	RBRACnum  shift 39
	.  error


state 29
	Type : IDnum Type_rec .  (15)
	Type : IDnum Type_rec . DOTnum Type  (17)
	Type_rec : Type_rec . LBRACnum RBRACnum  (21)

	LBRACnum  shift 40
	DOTnum  shift 41
	IDnum  reduce 15


state 30
	Type : INTnum Type_rec .  (16)
	Type : INTnum Type_rec . DOTnum Type  (18)
	Type_rec : Type_rec . LBRACnum RBRACnum  (21)

	LBRACnum  shift 40
	DOTnum  shift 42
	IDnum  reduce 16


state 31
	Decls : DECLARATIONSnum FieldDecl_List ENDDECLARATIONSnum .  (41)

	.  reduce 41


state 32
	FieldDecl_List : FieldDecl_List FieldDecl .  (44)

	.  reduce 44


state 33
	VariableDeclId : IDnum .  (50)
	VariableDeclId : IDnum . BracketLoop  (51)

	LBRACnum  shift 43
	SEMInum  reduce 50
	COMMAnum  reduce 50
	EQUALnum  reduce 50

	BracketLoop  goto 44


state 34
	FieldDecl_rec : FieldDecl_Id .  (46)

	.  reduce 46


state 35
	FieldDecl : Type FieldDecl_rec . SEMInum  (45)
	FieldDecl_rec : FieldDecl_rec . COMMAnum FieldDecl_Id  (47)

	SEMInum  shift 45
	COMMAnum  shift 46
	.  error


state 36
	FieldDecl_Id : VariableDeclId .  (48)
	FieldDecl_Id : VariableDeclId . EQUALnum VariableInitializer  (49)

	EQUALnum  shift 47
	SEMInum  reduce 48
	COMMAnum  reduce 48


state 37
	MethodDecl : METHODnum VOIDnum $$1 . IDnum LPARENnum Formal_Parameter_List RPARENnum Block  (14)

	IDnum  shift 48
	.  error


state 38
	MethodDecl : METHODnum Type IDnum . LPARENnum Formal_Parameter_List RPARENnum Block  (12)

	LPARENnum  shift 49
	.  error


state 39
	Type_rec : LBRACnum RBRACnum .  (20)

	.  reduce 20


state 40
	Type_rec : Type_rec LBRACnum . RBRACnum  (21)

	RBRACnum  shift 50
	.  error


state 41
	Type : IDnum Type_rec DOTnum . Type  (17)

	IDnum  shift 18
	INTnum  shift 19
	.  error

	Type  goto 51


state 42
	Type : INTnum Type_rec DOTnum . Type  (18)

	IDnum  shift 18
	INTnum  shift 19
	.  error

	Type  goto 52


state 43
	BracketLoop : LBRACnum . RBRACnum  (52)

	RBRACnum  shift 53
	.  error


state 44
	VariableDeclId : IDnum BracketLoop .  (51)
	BracketLoop : BracketLoop . LBRACnum RBRACnum  (53)

	LBRACnum  shift 54
	SEMInum  reduce 51
	COMMAnum  reduce 51
	EQUALnum  reduce 51


state 45
	FieldDecl : Type FieldDecl_rec SEMInum .  (45)

	.  reduce 45


state 46
	FieldDecl_rec : FieldDecl_rec COMMAnum . FieldDecl_Id  (47)

	IDnum  shift 33
	.  error

	FieldDecl_Id  goto 55
	VariableDeclId  goto 36


state 47
	FieldDecl_Id : VariableDeclId EQUALnum . VariableInitializer  (49)

	IDnum  shift 56
	LBRACEnum  shift 57
	LPARENnum  shift 58
	INTnum  shift 59
	PLUSnum  shift 60
	MINUSnum  shift 61
	NOTnum  shift 62
	ICONSTnum  shift 63
	SCONSTnum  shift 64
	.  error

	VariableInitializer  goto 65
	ArrayInitializer  goto 66
	ArrayCreationExpression  goto 67
	MethodCallStatement  goto 68
	Expression  goto 69
	SimpleExpression  goto 70
	Term  goto 71
	Factor  goto 72
	UnsignedConstant  goto 73
	Variable  goto 74


state 48
	MethodDecl : METHODnum VOIDnum $$1 IDnum . LPARENnum Formal_Parameter_List RPARENnum Block  (14)

	LPARENnum  shift 75
	.  error


state 49
	MethodDecl : METHODnum Type IDnum LPARENnum . Formal_Parameter_List RPARENnum Block  (12)
	Formal_Parameter_List : .  (22)

	INTnum  shift 76
	VALnum  shift 77
	RPARENnum  reduce 22

	Formal_Parameter_List  goto 78
	Formal_Parameter  goto 79
	Formal_Parameter_List_rec  goto 80


state 50
	Type_rec : Type_rec LBRACnum RBRACnum .  (21)

	.  reduce 21


state 51
	Type : IDnum Type_rec DOTnum Type .  (17)

	.  reduce 17


state 52
	Type : INTnum Type_rec DOTnum Type .  (18)

	.  reduce 18


state 53
	BracketLoop : LBRACnum RBRACnum .  (52)

	.  reduce 52


state 54
	BracketLoop : BracketLoop LBRACnum . RBRACnum  (53)

	RBRACnum  shift 81
	.  error


state 55
	FieldDecl_rec : FieldDecl_rec COMMAnum FieldDecl_Id .  (47)

	.  reduce 47


state 56
	Variable : IDnum . Variable_rec  (102)
	Variable_rec : .  (103)
